--- a/contact.html
+++ b/contact.html
@@ -68,10 +68,10 @@
 	<div class="ensemble">
 		<form>
 			<div class="form-group">
-				<label for="nom-société">
+				<label for="nom-societe">
 					Nom,Société
 				</label><br>
-				<input id="name" placeholder="nom, société" class="form-control" aria-required="true" aria-invalid="true" />
+				<input id="nom-societe" name="nom-societe" placeholder="nom, société" class="form-control" aria-required="true" aria-invalid="true" />
 			</div>
 			<div class="form-group">
 				<label for="email">
@@ -83,13 +83,14 @@
 				<label for="connaissance">
 					Comment nous avez-vous connu ?
 				</label><br>
-				<input class="form-control" placeholder="Google, pub, instagram, etc..." type="email" aria-required="true" id="input_504" />
+				<input class="form-control"  name="connaissance" placeholder="Google, pub, instagram, etc..." type="email" aria-required="true" id="connaissance" />
 			</div>
 			<div class="form-group ">
 				<br>
 				<label for="Brief">
 					Brief de votre projet <br>(Ajoutez autant de détails que nécessaire)<br>
-				</label><textarea id="message" class="form-control brief" rows="8" cols="50" aria-required="true"></textarea>
+				</label>
+				<textarea id="message" class="form-control brief" rows="8" cols="50" aria-required="true"></textarea>
 			</div> 
 			<button class="text-center bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 				Envoyer
